# market-intelligence-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  watchlist.example.yaml
config/: theme_aliases.yaml
scripts/: run_daily.ps1
src/market_agent/: __init__.py  cache.py  cli.py  config.py  deduplication.py  freshness.py  intelligence.py  models.py  pipeline.py  scope.py  scoring.py  theme_aliases.py
src/market_agent/renderers/: csv_sources.py  json_export.py  markdown.py
src/market_agent/sources/: akshare_cn.py  alpha_vantage.py  finnhub.py  fmp.py  public_news.py  sec_edgar.py  tushare_cn.py  yfinance_us.py
src/market_agent/utils/: text.py  time.py
tests/: test_deduplication.py  test_freshness.py  test_intelligence.py  test_materiality_scoring.py  test_models.py  test_renderers.py  test_theme_aliases.py  test_watchlist_loader.py  test_yfinance_source.py
