[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-intelligence-agent"
version = "0.1.0"
description = "Daily market intelligence collection and reporting CLI."
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<1",
  "pydantic>=2.7,<3",
  "python-dotenv>=1.0,<2",
  "httpx>=0.27,<1",
  "requests>=2.31,<3",
  "pandas>=2.2,<3",
  "PyYAML>=6.0,<7",
  "feedparser>=6.0,<7",
  "beautifulsoup4>=4.12,<5",
  "yfinance>=0.2.40,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
market-agent = "market_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
